add natureza da pesquisa

--- a/template-tcc1/bibliografia.bib
+++ b/template-tcc1/bibliografia.bib
@@ -372,3 +372,30 @@ Conceptual Graphs },
 	Year = {2002},
 	Url = {https://arxiv.org/pdf/1301.7363.pdf}
 }
+
+
+@book{gerhardt2009,
+author = {E. T. GERHARDT and D. T. SILVEIRA },
+title = {Métodos de Pesquisa.},
+year = {2009},
+publisher = {Luciane Delani},
+}
+
+@book{gil1991,
+author = {C. A. GIL },
+title = {Como Elaborar Projetos de Pesquisa.},
+year = {1991},
+publisher = {EDITORA ATLAS S.A},
+}
+
+@article{draper2018,
+	Author = {C. F. Draper and K. Duisters and B. Weger and A. Chakrabarti and A. C. Harms and L. Brennan and T. Hankemeier and L. Gouletand T. Konz and F. P. Martin and S. Moco and J. van der Greef },
+	Title = {Menstrual cycle rhythmicity: metabolic patterns in healthy women},
+	Year = {2018}
+}
+
+@article{reed2018,
+	Author = {B. G. Reed and B. R. Carr},
+	Title = {The Normal Menstrual Cycle and the Control of Ovulation},
+	Year = {2018}
+}
