--- a/template-tcc1/editaveis/introducao.tex
+++ b/template-tcc1/editaveis/introducao.tex
@@ -1,6 +1,6 @@
 \chapter[Introdução]{Introdução}
 
-Neste capítulo, serão descritos a contextualização, apresentando brevemente o tema; a justificativa, apesentando os porquês da elaboração do trabalho; os objetivos geral e específicos e a organização dos capítulos do trabalho.
+Neste capítulo, serão descritos a contextualização, apresentando brevemente o tema; a justificativa, apesentando os porquês da elaboração do trabalho; os objetivos geral e específicos e a organização dos capítulos dessa monografia.
 
 \section{Contextualização}
 
@@ -116,7 +116,7 @@ pesquisas da própria autora, em formato de questionários, sendo esses aplicado
 reprodutiva.
 
 
-Dado a particularidades do assunto, bem como por lidar com aspectos pessoais, vale ressaltar que este 
+Dado a particularidade do assunto, bem como por lidar com aspectos pessoais, vale ressaltar que este 
 estudo não tem como objetivo entrar na discussão de diferença entre sexo. Além disso, o estudo não 
 conta com o acompanhamento dedicado de um profissional da saúde, uma vez que a ideia não é representar 
 um tratamento médico ou algo nesse sentido. Trata-se apenas de um estudo, tendo como objetivo desenvolver 
@@ -178,13 +178,11 @@ Para atingir o objetivo geral, alguns objetivos específicos foram estabelecidos
 
         \item Definir um processo de coleta de dados sobre o perfil das mulheres de acordo com seus ciclos menstruais;
         
-        \item Difinir um processo de análise de resultados obtidos a partir dos dados coletados;
+        \item Definir um processo de análise de resultados obtidos a partir dos dados coletados;
 
         \item Definir um processo de contagem de ciclo para determinar em que fase do ciclo menstrual a mulher se encontra;
 
-        \item Definir um processo de recomendação de tarefas que podem ser  mais facilmente realizadas baseado na fase do ciclo;
-
-        \item Definir um processo de recomendação de tarefas que podem ser mais dificilmente realizadas baseado na fase do ciclo, e
+        \item Definir um processo de recomendação de tarefas que podem ser mais facilmente ou dificilmente realizadas baseado na fase do ciclo, e
 
         \item Desenvolver um aplicativo de recomendação de tarefas baseado nos processos definidos anteriormente.
 
@@ -205,7 +203,7 @@ A monografia está organizada nos seguintes capítulos:
 
         \item Capítulo 5 - Proposta: apresenta a proposta deste trabalho em si, e
 
-        \item Capítulo 6 - Resultados Obtidos: expões os resultados alcançados até o momento, no escopo do TCC-01.
+        \item Capítulo 6 - Resultados Obtidos: acorda os resultados alcançados até o momento, no escopo do TCC-01.
           
 \end{itemize}
 % Como a concentração de estradiol e progesterona variam muito de mulher para mulher, utilizá-lo como medida única pode ser insuficiente para determinar individualmente a fase do ciclo \cite{poroma2014}.
