--- a/template-tcc1/editaveis/metodologia.tex
+++ b/template-tcc1/editaveis/metodologia.tex
@@ -1,18 +1,169 @@
 \chapter[Metodologia]{Metodologia}
 
-\section{Metodologia}
+\section{Considerações Iniciais}
+
+Neste capítulo, será apresentada a metodologia utilizada no desenolvivmento dessa 
+monografia. Na seção 4.1 será detalhado a metodologia adotada, de acordo com os 
+critérios de abordagem, natureza, objetivos e procedimentos. A seção 4.2 trará o fluxo 
+das atividades que foram desenvolvidas nessa monografia e uma projeção das atividades 
+que serão desenvolvidas no trabalho de conclusão de curso 2(TCC2). Por fim, a seção 4.3 trará 
+o cronograma das atividades desenvolvidas nessa monografia e o provável cronograma para 
+o desenvolvimendo do TCC2.
+
 
 \subsection{Classificação da Pesquisa}
 
-\subsubsection{Quanto à abordagem}
+Ge acordo com \citeonline{gerhardt2009}, a metodologia é o estudo da organização, dos 
+caminhos a serem percorridos, para se realizar uma pesquisa, ou um estudo, ou para se 
+fazer ciência. No caso de uma pesquisa científica, ela pode ser classificada em 
+vários tipos: quanto à abordagem; quanto à natureza; quanto aos objetivos e quanto aos procedimentos.
+
+\subsubsection{Quanto à Abordagem}
+
+A classificação quanto a abordagem pode ser dividida em: pesquisa qualitativa e quantitativa. 
+
+A pesquisa qualitativa busca explicar o porquê das coisas e 
+comumente analiza dados que não são métricos, tornando dificil 
+a quantificação de valores. Ela tende a salientar os
+aspectos dinâmicos, holísticos e individuais da experiência humana, para apreender
+a totalidade no contexto daqueles que estão vivenciando o fenômeno \cite{gerhardt2009}.
+
+Já a pesquisa quantitativa, tem resultados que podem ser quantificados e se baseia na 
+análise de dados brutos, e tende a enfatizar o raciocínio dedutivo, as regras da lógica 
+e os atributos mensuráveis da experiência humana
+
+Tendo o conhecimento desses conceitos, nessa monografia, a pesquisa é, predominantemente, 
+qualitativa, por possuir resultados não métricos que precisam de interpretação. 
+
 
 \subsubsection{Quanto à Natureza}
 
+Segundo \cite{gerhardt2009} a pesquisa quanto a natureza pode ser dividida em: pesquisa 
+básica e pesquisa aplicada. A pesquisa básica gerá conhecimentos novos, sem aplicação básica 
+prevista e a pesquisa aplicada gerá conhecimentos para aplicação prática, dirigidos à solução de 
+problemas específico. Tendo o objetivo de desenvolver um aplicativo com os conhecimentos 
+adiquiridos, essa pesquisa é de natureza aplicada.
+
+
 \subsubsection{Quanto aos Objetivos}
 
-\subsubsection{Quanto aos procedimentos}
+Quanto aos objetivos, \citeonline{gil1991} classifica as pesquisas em exploratória, 
+descritivas e explicativas. 
+
+A pesquisa exploratória tem como objetivo o aprimoramento 
+de ideias, ou a descoberta de intuições, o que a faz ter um planejamento bem flexivel. 
+Essas pesquisas envolvem: (i) levantamento bibliográfico, (ii) entrevistas com pessoas 
+que tiveram experiência prática com o problema pesquisado e (iii) análise de exemplos que 
+"estimulam a compreensão".
+
+
+A pesquisa descritiva tem como objetivo principal descrever caracteristicas de determinada 
+população ou fenomeno, ou o estabelecimento de relaçoes entre variáveis, definindo técnicas 
+padronizadas de coleta de dados, tais como, questionários e observação sistemática. A 
+pesquisa explicativa têm objetivo principal identificar os fatores que determinam ou contribuem 
+para a ocorrência  dos fenômenos. 
+
+Essa monografia é portanto, predominantemente, exploratória, 
+por envolver levantamento bibliográfico e questionários com mulheres que tem experiência 
+prática com o problema. A própria definição do tema, teve em si, um caráter intuitivo. 
+
+\subsubsection{Quanto aos Procedimentos}
+
+\citeonline{gil1991}, separa a pesquisa quanto aos 
+procedimentos em: experimental; bibliográfica; 
+documental; de campo; Ex-Post-Facto; 
+de levantamento; com survey; estudo de caso; 
+participante; pesquisa-ação; etinográfica e etnometodológica.
+
+Essa pesquisa quanto aos procedimentos pode ser classificada como: pesquisa bibliográfica, 
+estudo de caso e pesquisa-ação.
+Ela é bibliográfica porquê utiliza do levantamento de referências teóricas já análisadas, como livros e artigos ciêntificos. É estudo de caso por 
+ser um aplicado a uma comunidade específica, criada pela própria autora, com 
+mulheres que tiveram interesse no tema e é de 
+pesquisa-ação porquê exise o envolvimento da autora, 
+que esteve participando ativamente ao longo das 
+atividades aplicadas ao grupo.
+
 
 \subsection{Fluxo das Atividades}
+
+O fluxo a seguir, foi contruído utilizando a notação BPMN e apresenta 
+as atividades já desenvolvidas ao longo da execução do 
+TCC1 e as que serão desenvolvidas a partir do TCC2. 
+Adicionalmente, as próximas sessões detalharão de 
+forma mais específica cada etapa desse processo.
+
+
+\subsubsection{Definição do Tema}
+Definir Tema: Esta atividade, já realizada, teve por objetivo escolher um tema,
+junto aos orientadores e com base em gaps tecnológicos da área. Diante das pesquisas
+realizadas, escolheu-se trabalhar com geração de código a partir de modelos orientados à
+meta.
+\subsubsection{Levantamento Bibliográfico}
+Realizar Levantamento Bibliográfico: Esta atividade, já realizada, teve por
+objetivo obter um conhecimento inicial dos autores bem como de publicações pertinentes
+aos tópicos de interesse do tema dessa monografia.
+
+\subsubsection{Proposta inicial}
+Elaborar Proposta Inicial: Esta atividade, já realizada, teve por objetivo elaborar uma proposta que embasasse e justificasse a necessidade de geração de código a
+partir de modelos orientados à meta. Conforme já acordado antes, optou-se por desenvolver uma aplicação que permita modelar usando a notação i* bem como gerar um código
+preliminar, utilizando-se de princípios do framework MDA e orientando-se pelo padrão
+arquitetural MVC.
+\subsubsection{Suporte Tecnológico}
+Definir Suporte Tecnológico: Esta atividade, já realizada, teve por objetivo
+levantar as tecnologias para apoiar tanto o desenvolvimento da aplicação, quanto as necessidades de gerenciamento e pesquisa desse trabalho.
+Definir Referencial Teórico: Esta atividade, já realizada, teve por objetivo
+levantar as principais fontes conceituais para embasar o presente trabalho.
+Figura 9 – Fluxo de Atividades do Trabalho
+\subsubsection{Metodologia de pesquisa}
+Definir Metodologia de Pesquisa: Esta atividade, já realizada, teve por objetivo definir a metodologia para guiar a pesquisa, permitindo classificar essa última quanto
+à abordagem, à natureza, aos objetivos, e aos procedimentos. Adicionalmente, ao conhecer
+melhor a pesquisa, e como resultado dessa atividade, foi possível estabelecer um fluxo de
+atividades bem definido.
+\subsubsection{Proposta da Aplicação}
+Definir Proposta da Aplicação: Esta atividade, já realizada, teve por objetivo
+delimitar o escopo da proposta, estabelecendo com maior detalhamento os principais
+objetivos desse trabalho, em seu âmbito geral - objetivo geral - e específico - objetivos
+específicos.
+\subsubsection{Prova de Conceito}
+Implementar prova de Conceito: Esta atividade, já realizada, teve por objetivo
+implementar parte da proposta, desde a primeira parte do trabalho, permitindo avaliar
+a viabilidade do projeto que se esperava realizar, em sua plenitude, na segunda parte do
+trabalho. Tal atividade orientou-se pelo fluxo apresentado na seção 4.2.1.
+
+\subsubsection{Refinar Monografia}
+Refinar Monografia: Esta atividade, já realizada, teve por objetivo realizar ciclos
+de revisão, junto aos orientadores, visando aprimorar a monografia.
+
+\subsubsection{Apresentar Trabalho}
+Esta atividade visou apresentar todas as atividades realizadas na primeira parte do trabalho, para os membros da banca, com o intuito de
+coletar outras impressões, as quais serviram de insumos relevantes para aprimoramento
+do trabalho.
+
+\subsubsection{Realizar Correções da Banca}
+: Esta atividade, já realizada, objetivou revisar o
+trabalho, com base nas impressões coletadas junto aos membros da banca.
+
+\subsubsection{Implementar Aplicação}
+: Esta atividade, já realizada, teve o objetivo de finalizar a implementação da aplicação, a qual foi iniciada na prova de conceito bem como
+representa o principal produto de software obtido ao final desse trabalho. Tal atividade
+orientou-se pelo fluxo apresentado na seção 4.2.1.
+
+\subsubsection{Análise de Dados Obtidos}
+Análise de Dados : Esta atividade, já realizada, visou analisar a aplicação, ou seja, se essa atendeu ao esperado (lê-se proposto); além de levantar se os objetivos
+foram alcançados.
+
+\subsubsection{Refinar Monografia}
+Refinar Monografia: Esta atividade, já realizada, previu realizar novos ciclos de
+revisão, junto aos orientadores, visando aprimorar a monografia.
+
+\subsubsection{Apresentar Trabalho}
+Apresentar Trabalho: Esta atividade visa apresentar o resultado final do trabalho aos membros da banca; novamente, com o intuito de coletar as impressões desses
+membros. Havendo necessidade, será realizada mais uma atividade para refinamento da
+monografia
+
+\subsubsection{Realizar Correções da Banca}
+
 
 \subsubsection{Atividades de Desenvolvimento}
 
@@ -27,6 +178,4 @@
           
 Do ponto de vista dos procedimentos técnicos esta é uma pesquisa 
 experimental que procura estabelecer uma relação entre as causas e os efeitos de um determinado fenômino. Este fenômeno seria, os efeitos do ciclo menstrual femino na performance individual das mulheres nas tarefas cotididanas.
-
-Esta pesquisa é de natureza aplicada por ter como objetivo final, gerar um aplicativo com sistema de recomendação baseado no perfil individual das mulheres e nas fases do ciclo menstrual femino. A forma de abordagem do problema qualitativa e quantitativa. Quanto a abordagem quantitativa, a pesquisa tem a finalidade de ser exploratória utilizando fontes bibliográficas como instrumento de conhecimento e base para afirmações. Quanto a abordagem qualitativa a finalidade da pesquisa se torna explicativa por procura identificar os fatores que contribuem ou determinam a ocorrência de fenômenose e explicar o porquê das coisas e suas causas(GIL, 2010).
 
