--- a/template-tcc1/editaveis/proposta.tex
+++ b/template-tcc1/editaveis/proposta.tex
@@ -1,19 +1,37 @@
 \chapter[Proposta]{Proposta}
 
 \section{Considerações Iniciais }
+(contextualização, como cheguei a ideia, como criei o grupo, como defini que é um aplicativo, como decidi as perguntas do Questionário)
 
-\section{O Aplicativo }
+\section{Coleta de Dados}
 
-\subsection{Processo de Coleta de Dados}
+\subsection{Defição da Plataforma}
+(porque um Aplicativo ?)
+
+\subsection{Questões do Questionário}
+
+\section{Análise de Dados}
+
+\subsection{Extração de informação dos Perfis}
+(perfis classificados de acordo com as respostas do Questionário)
+
+\subsection{Tarefas a Serem Recomendadas}
+(tarefas mais fáceis e mais dificeis de acordo com as fases)
+
+\section{O Aplicativo}
+
+\subsection{Questionário inicial}
+(minimizar o problema do começo frio)
 
 \subsection{Determinando que Fase do Ciclo o Usuário se Encontra}
+(primordial para as recomendações)
 
-\subsection{Definição das Tarefas a Serem Recomendadas}
+\subsection{Prova de Conceito}
 
-\section{Prova de Conceito}
+\subsubsection{Prototipo de Alta Fidelidade}
 
-\subsection{Prototipo de Alta Fidelidade}
 
-\subsection{Desenvolvimeno Inicial do Aplicativo}
+\subsubsection{Desenvolvimeno Inicial do Aplicativo}
+
 
 \section{Considerações Finais}
